# University-projects

./: README.md
Computer Networks I/: README.md  userApplication.java
Data Structures/: README.md
Data Structures/Proximity Part A/: .classpath  .project  null-null.txt
Data Structures/Proximity Part B/: .project  Heuristic-Heuristic.txt  Heuristic-Random.txt  Random-Heuristic.txt  Random-Random.txt
Data Structures/Proximity Part C.1/: .classpath  .project  Heuristic-Random.txt  MinMaxPlayer-Heuristic.txt  MinMaxPlayer-Random.txt  Random-Random.txt
Digital Filters/: demo.m
Multimedia Systems/: README.md
Multimedia Systems/auxiliary/: getSeqEntityBits.m  getTheGlobals.m  pushstream.m  readstream.m  treelist.m  vlcTable.m
Multimedia Systems/step1/: FIRfilter.m  blockDCT.m  ccir2ycrcb.m  costFunction.m  demo1.m  dequantizeI.m  dequantizePB.m  iBlockDCT.m  iMotEstB.m  iMotEstP.m  iRunLength.m  interpFilter.m  ivlc.m  motEstB.m  motEstP.m  quantizeI.m  quantizePB.m  runLength.m  vlc.m  ycrcb2ccir.m
Operating Systems/: README.md
Operating Systems/Task1/: modify.sh  modify_examples.sh  task1.txt
Optimization Techniques/: README.md
Parallel & Distributed Computer Systems/: README.md
Parallel & Distributed Computer Systems/Project#1 - Octree/Pthreads/: CMakeLists.txt  Makefile  data_rearrangement.c  hash_codes.c  morton_encoding.c  radix_sort.c  read_data.m  run_tests.sh  test_octree  test_octree.c  utils.h
Programming Techniques/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
Structured Programming/: A.cpp  B.c  C.c  D.c  E.c  F.cpp  G.c
(+144 files in other folders)
